[gd_scene load_steps=10 format=3 uid="uid://dqunn5rh4414l"]

[ext_resource type="Script" uid="uid://d1wv6w3781lja" path="res://src/scenes/ui/resources/air_meter_2.gd" id="1_oowxl"]
[ext_resource type="FontFile" uid="uid://b73jymev43fu5" path="res://ofl_font_assets/BrassMonoRegular-d9WLg.ttf" id="1_sj3cr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oowxl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t53cn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1hmq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lo8ac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfxgw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8e5l"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoaug"]
bg_color = Color(0.788235, 0.792157, 0.921569, 0.454902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="AirMeter2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oowxl")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_oowxl")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t53cn")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.4)
theme_override_fonts/font = ExtResource("1_sj3cr")
theme_override_font_sizes/font_size = 14
text = "1:32.84"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1hmq0")

[node name="MaxLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.172549)
text = "Max: 3:00.00"
horizontal_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_lo8ac")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="UnitsDisplay" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_sj3cr")
theme_override_font_sizes/font_size = 15
text = ">100"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tfxgw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(60, 400)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_s8e5l")
theme_override_styles/fill = SubResource("StyleBoxFlat_uoaug")
value = 50.0
fill_mode = 3
show_percentage = false

[node name="Timer" type="Timer" parent="."]
one_shot = true
